syntax="proto3";

package userprofile;

message AdShow {
	int32 adid = 1; // 单元ID,单元级别生效
	int32 count = 2; // 今天投放次数
	int32 click_count = 3; // 今日广告被此用户点击次数
}

message DspSrc {
	string dsp_pid = 1; // 单元ID,单元级别生效
	int32 count = 2; // 今天投放次数
	int32 click_count = 3; // 今日广告被此用户点击次数
	string ad_slot = 4;//广告位id
}
message AdFreq {
	repeated AdShow ads = 1;
	uint32 req_count = 2;
	uint32 click_count = 3; //用户今天点击次数
	repeated DspSrc dsps = 4; //此用户今日广告展示信息
	int64 coin_timestamp = 5; //金币样式时间戳
	int64 cf_coin_timestamp = 6; //详情页金币样式时间戳
	int64 auto_coin_timestamp = 7; //自动化金币样式时间戳
	int64 class_last_show_timestamp = 8; //上次展示class时间戳
	int64 class_coin_last_show_timestamp = 9; //上次展示金币导流应用商城class的时间戳
	repeated Freqency freqs = 10;
}

message Freqency {
	string key = 1;
	int64 timestamp = 2;
}

message APPPackage {
	string packagename = 1; // 包名
	string version = 2; // 版本
	int64 firstInstallTime = 3;
	int64 lastUpdateTime = 4;
}

message InterestItem {
	int32 tag = 1; //兴趣标签id
	int32 score = 2; // 兴趣权值
}

message UserProfile {
	string devid = 1; //设备号，没有后缀, 用户的主key
	int32 age = 2; //年龄 0: 未知 1: 小于18 2:18-23 3:24-30 4:31-40 5:41-50 6: >50
	int32 sex = 3; //性别 0: 未知 1: 男 2: 女
	int32 coin = 4; // 金币数
	repeated InterestItem interests = 5; // 人群标签
	repeated APPPackage installpkg = 6; // 已安装列表
	int32 pcategory = 7; //人群类型标签,趣头条用
	int32 incr_coin = 8; // 新增金币数
	int32 antispam = 9; // 是否命中反作弊人群
	int32 share_coin = 10; //分享朋友圈获得的积分
	int32 newUser = 11; //是否是新用户，45天内是新用户，是1，不是0
	repeated InterestItem interestedWords = 12;  //感兴趣的词汇分类
	string province = 13; //省份
	string city = 14; //城市
	string userCreateTime = 15; // 账号创建日期
	int64 ctrcnt = 16; // uid维度的最近几天点击总次数
	int64 cvrcnt = 17; // uid维度的最近几天转化总次数
	string lastDayInCPC = 18; // 最近一次在cpc union log中出现的date，以"yyyy-mm-dd"的格式
	string ageNew = 21; // dnn年龄模型预测4分段结果
	int32 ageNew1 = 22; // dnn年龄模型预测4分段结果，0: 未知 1: 小于18 2:18-22 3:23-40 4: >40
	string recentIP = 23; // 最近常用的ip地址
	string registeredIP = 24; // 注册时使用的ip地址
    repeated int32 installedUserIDList = 25; // 通过应用商城最近安装过的广告主id列表
	QttProfile qttProfile = 101;
}

message QttProfile {
	string devid = 1;
	int64 member_id = 2;
	string nickname = 3;
	string wx_nickname = 4;
	int32 lx_type = 5;        //0 未知, 1 内  2 外
	int32 lx_package = 6;
	QttProfile teacher = 11;
	repeated QttProfile students  = 12; //徒弟
	repeated QttProfile siblings = 13;  //同师傅用户
}

message MiDuUserProfile {
	string uid = 1; // 用户设备号
	int32 newUser = 2; // 是否是新用户，45天内是新用户，是1，不是0
	string lastLoginDay = 3;//最后登录时间
}

message DuanZiUserProfile {
	string uid = 1; // 用户设备号
	int32 newUser = 2; // 是否是新用户，45天内是新用户，是1，不是0
}

message UserSignal {
	string uid = 1;
	map<string, string> predictedAgeRange = 2; // key是实验名，默认为default，<18; 18-23; 23-40; >40
	string birthYear = 3;
	int32 sex = 4; // 性别 0: 未知 1: 男 2: 女
	int32 newUser = 5; // 是否是新用户，45天内是新用户，是1，不是0
	string province = 6;
	string city = 7;
	string usercreateTime = 8;
	string lastDayInCPC = 9; // 最近一次在cpc union log中出现的date，以"yyyy-mm-dd"的格式
	map<string, double> dspImpressedWords = 10; // 用户在dsp广告曝光中的关键词
	map<string, double> dspClickedWords = 11; // 用户在dsp广告点击的关键词
	string os = 12;
	string network = 13;
	int32 phonePrice = 14;
	string brand = 15;
	int32 cityLevel = 16;
	repeated Feature user_day_ad_behavior = 17;
	repeated Feature user_day_rec_behavior = 18;
	Feature user_installed_app = 19;
	Feature dy_6_favoCate5 = 20;
	Feature dy_3_readVideoNum = 21;
	Feature dy_6_readCate = 22;
	Feature st_2_birth = 23;
	map<string, Cvr> recall_cvr = 24;
	map<string, double> allTagIDs = 25; // 人群包，key为人群包id，value目前不使用
	int32 ageID = 26; // 广告定向中使用的年龄的编号
    map<string, Cvr> recall_cvr_exp = 27;
	repeated int32 installedUserIDList = 28; // 通过应用商城最近安装过的广告主id列表
	string recentIP = 29; // 最近常用ip地址
	string registeredIP = 30; // 注册时使用ip地址
	QttProfile qttProfile = 101;
}


message UserProfileV2 {
	string uid = 1;
	int32 sex = 2;
	int32 age = 3;
	int32 newUser = 4;
	string province = 5;
	string city = 6;
	string userCreateTime = 7;
	string lastDayInCPC = 8;
	repeated int32 installedUserIDList = 9;
	string recentIP = 10;
	string registeredIP = 11;
	repeated InterestItem interests = 12; // 人群标签
	repeated InterestItem interestedWords = 13;  //感兴趣的词汇分类
	repeated APPPackage installpkg = 14; // 已安装列表
	QttProfile qttProfile = 101;
}


message Cvr {
	double cvr = 1;
	double cvrRank = 2;
}

message Feature {
	// also serves as hash_prefix
	string name = 1;

	// str: 1/ int: 2 / float: 3
	int32 type = 2;

	repeated string str_list = 3;
	repeated int32 int_list = 4;
	repeated float float_list = 5;

	repeated int64 int64_list = 6;
}
